Remove query with ID.